[package]
name = "eth-dance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
bigdecimal = "0.3.0"
ethabi = "18.0.0"
ethers = "2.0.0"
flexi_logger = "0.25.3"
hex = "0.4.3"
log = "0.4.17"
pest = "2.5.7"
pest_derive = "2.5.7"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
serde_with = "2.3.2"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
url = "2.3.1"

[dev-dependencies]
clap = { version = "4.2.1", features = ["derive"] }

[[example]]
name = "cli"
path = "cli/main.rs"
